--- a/app/views/layouts/_header.erb
+++ b/app/views/layouts/_header.erb
@@ -1,6 +1,9 @@
+Knoda 
+
 <% if current_user.blank? %>
 	<%= link_to "Sign in", new_user_session_path %>
 <% else %>
+	<%= link_to "Predictions", predictions_path %> |
 	<%= link_to "Edit profile", edit_user_registration_path %> |
 	<%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
 <% end %>
