Adds simple markup for predictions views (index and show)

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,10 @@
  *= require_self
  *= require_tree .
  */
+.right {
+    align:right;
+    float:right;
+    display:inline-block;
+    margin-right: 20px;
+
+}
