--- a/app/assets/stylesheets/predictions.css.scss
+++ b/app/assets/stylesheets/predictions.css.scss
@@ -8,3 +8,32 @@
   .m { font-size: 1.2em; }
   .l { font-size: 1.8em; }
 }
+
+.predictions_list {
+  list-style: none;
+  margin: 10px 0 0 0;
+
+  li {
+    padding: 10px 0;
+    border-top: 1px solid #e8e8e8;
+  }
+}
+.content, .taglist {
+  display: block;
+}
+
+.date {
+  color: gray;
+}
+
+.menu-panel {
+  background-color: gray;
+  width:200px;
+  float:left;
+  display:inline-block;
+}
+
+.prediction-panel {
+  list-style: none;
+  margin-left:200px;
+}
