--- a/app/views/predictions/index.html.erb
+++ b/app/views/predictions/index.html.erb
@@ -1,42 +1,9 @@
-<h1>Listing predictions</h1>
+<div id="container">
+  <div id="menu-panel">Menu Panel</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>User</th>
-      <th>Title</th>
-      <th>Text</th>
-      <th>Expires at</th>
-      <th>Closed</th>
-      <th>Closed at</th>
-      <th>Closed as</th>
-      <th>Tags</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+    <div class="prediction-panel" style="">
 
-  <tbody>
-    <% @predictions.each do |prediction| %>
-      <tr>
-        <td><%= prediction.user_id %></td>
-        <td><%= prediction.title %></td>
-        <td><%= prediction.text %></td>
-        <td><%= prediction.expires_at %></td>
-        <td><%= prediction.closed %></td>
-        <td><%= prediction.closed_at %></td>
-        <td><%= prediction.closed_as %></td>
-        <td><%= raw prediction.tag_list.map { |t| link_to t, tag_path(t) }.join(', ') %></td>
-        <td><%= link_to 'Show', prediction %></td>
-        <td><%= link_to 'Edit', edit_prediction_path(prediction) %></td>
-        <td><%= link_to 'Destroy', prediction, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <%= render 'predictions_list' %>
 
-<br>
-
-<%= link_to 'New Prediction', new_prediction_path %>
-<%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+    </div>
+</div>
