--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -7,6 +7,7 @@
       <th>Username</th>
       <th>Email</th>
       <th>Points</th>
+      <th>Predictions count</th>
       <th>View account</th>
     </tr>
   </thead>
@@ -16,8 +17,9 @@
       <tr>
         <td><%= user.id %></td>
         <td><%= user.username %></td>
-				<td><%= user.email %></td>
+        <td><%= user.email %></td>
         <td><%= user.points %></td>
+        <td><%= user.predictions.count %></td>
         <td><%= link_to "View", [:admin, user] %></td>
       </tr>
     <% end %>
