Fixes wording for deleting user

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -26,4 +26,4 @@
 
 <br/>
 
-<%= link_to 'Delete user', [:admin, @user], method: :delete, data: { confirm: 'Are you sure?' } %>
+<%= link_to 'Delete user', [:admin, @user], method: :delete, data: { confirm: 'Do you really want to delete this user?' } %>
