--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -15,7 +15,7 @@
       <tr>
         <td><%= @user.id %></td>
         <td><%= @user.username %></td>
-        <td><%= @user.email %><br>Edit email</td>
+        <td><%= @user.email %><br><%= link_to "Edit email", edit_admin_user_path(@user) %></td>
         <td><%= @user.points %></td>
         <td><%= @user.predictions.count %></td>
         <td><%= @user.created_at %></td>
