Adds link to predictions in CMS

--- a/app/views/layouts/admin/_header.html.erb
+++ b/app/views/layouts/admin/_header.html.erb
@@ -1,2 +1,2 @@
-Knoda.CMS Predict | Predictions | <%= link_to "Users", admin_users_path %>
+Knoda.CMS Predict | <%= link_to "Predictions", admin_predictions_path %>| <%= link_to "Users", admin_users_path %>
 <br/>
