Adds model, controller and serializer for Challenge

--- a/app/views/layouts/_header.erb
+++ b/app/views/layouts/_header.erb
@@ -4,6 +4,7 @@ Knoda
 	<%= link_to "Sign in", new_user_session_path %>
 <% else %>
 	<%= link_to "Predictions", predictions_path %> |
+    <%= link_to 'Сhallenges', challenges_path %> |
 	<%= link_to "Edit profile", edit_user_registration_path %> |
 	<%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
     <div class="right">
