--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,3 +18,24 @@
     margin-right: 20px;
 
 }
+
+.content, .taglist {
+    display: block;
+}
+
+.date {
+    color: gray;
+}
+
+.menu-panel {
+    list-style: none;
+    background-color: gray;
+    width:200px;
+    float:left;
+    display:inline-block;
+}
+
+.prediction-panel, .challenge-panel {
+    list-style: none;
+    margin-left:200px;
+}
