--- a/app/views/predictions/_prediction.html.erb
+++ b/app/views/predictions/_prediction.html.erb
@@ -7,5 +7,8 @@
   <span class="date">
     made <%= time_ago_in_words(prediction.created_at) %> ago |
   </span>
+  <span class="date">
+    <%= prediction.voters.any? ? prediction.voters.count : 0 %>
+  </span>
   <span class="taglist">Tags: <%= raw prediction.tag_list.map { |t| link_to t, tag_path(t) }.join(', ') %></span>
 </li>
