--- a/app/views/reports_mailer/daily.text.erb
+++ b/app/views/reports_mailer/daily.text.erb
@@ -1,4 +1,4 @@
-Daily report <%= DateTime.now %>
+Daily report <%= DateTime.now.to_date %>
 
 Number or new users - <%= @users.count %>
 <% @users.each do |u| %>
