--- a/app/views/reports_mailer/daily.html.erb
+++ b/app/views/reports_mailer/daily.html.erb
@@ -12,9 +12,9 @@
 	<tbody>
 <% @users.each do |u| %>
 		<tr>
-			<td><%= u.id %><td/>
-			<td><%= u.email %><td/>
-			<td><%= u.created_at %><td/>
+			<td><%= u.id %></td>
+			<td><%= u.email %></td>
+			<td><%= u.created_at %></td>
 		</tr>
 <% end %>
 	</tbody>
