--- a/app/views/reports_mailer/daily.html.erb
+++ b/app/views/reports_mailer/daily.html.erb
@@ -1,7 +1,7 @@
 <strong>Daily report <%= DateTime.now.to_date %></strong><br/>
 
 <p>Number or new users - <%= @users.count %></p>
-<table border="1">
+<table border="0" style="border:1px #000000 solid">
 	<thead>
 		<tr>
 			<th>User ID</th>
@@ -23,7 +23,7 @@
 <p>Number of new predictions - <%= @predictions.count %></p>
 
 <p>Number of agrees and disagrees for each prediction</p>
-<table border="1">
+<table border="0" style="border:1px #000000 solid">
 	<thead>
 		<tr>
 			<th>ID</th>
