--- a/app/views/reports_mailer/daily.html.erb
+++ b/app/views/reports_mailer/daily.html.erb
@@ -1,20 +1,20 @@
 <strong>Daily report <%= DateTime.now.to_date %></strong><br/>
 
 <p>Number or new users - <%= @users.count %></p>
-<table border="0" style="border:1px #000000 solid">
+<table style="border-collapse: collapse">
 	<thead>
 		<tr>
-			<th>User ID</th>
-			<th>EMail</th>
-			<th>Created At</th>
+			<th style="border: 1px solid black">User ID</th>
+			<th style="border: 1px solid black">EMail</th>
+			<th style="border: 1px solid black">Created At</th>
 		</tr>
 	</thead>
 	<tbody>
 <% @users.each do |u| %>
 		<tr>
-			<td><%= u.id %></td>
-			<td><%= u.email %></td>
-			<td><%= u.created_at %></td>
+			<td style="border: 1px solid black"><%= u.id %></td>
+			<td style="border: 1px solid black"><%= u.email %></td>
+			<td style="border: 1px solid black"><%= u.created_at %></td>
 		</tr>
 <% end %>
 	</tbody>
@@ -23,24 +23,24 @@
 <p>Number of new predictions - <%= @predictions.count %></p>
 
 <p>Number of agrees and disagrees for each prediction</p>
-<table border="0" style="border:1px #000000 solid">
+<table style="border-collapse: collapse">
 	<thead>
 		<tr>
-			<th>ID</th>
-			<th>Body</th>
-			<th>Created At</th>
-			<th>Agree</th>
-			<th>Disagree</th>
+			<th style="border: 1px solid black">ID</th>
+			<th style="border: 1px solid black">Body</th>
+			<th style="border: 1px solid black">Created At</th>
+			<th style="border: 1px solid black">Agree</th>
+			<th style="border: 1px solid black">Disagree</th>
 		</tr>
 	</thead>
 	<tbody>
 <% @predictions.each do |p| %>
 		<tr>
-			<td><%= p.id %></td>
-			<td><%= p.body %></td>
-			<td><%= p.created_at %></td>
-			<td><%= p.challenges.agreed_by_users.last_day.count %></td>
-			<td><%= p.challenges.disagreed_by_users.last_day.count %></td>
+			<td style="border: 1px solid black"><%= p.id %></td>
+			<td style="border: 1px solid black"><%= p.body %></td>
+			<td style="border: 1px solid black"><%= p.created_at %></td>
+			<td style="border: 1px solid black"><%= p.challenges.agreed_by_users.last_day.count %></td>
+			<td style="border: 1px solid black"><%= p.challenges.disagreed_by_users.last_day.count %></td>
 		</tr>
 <% end %>
 	</tbody>
