--- a/app/views/user_mailer/email_was_changed.text.erb
+++ b/app/views/user_mailer/email_was_changed.text.erb
@@ -1,3 +1,6 @@
-UserMailer#email_was_changed
+Hi <%= @resource.username %>,
 
-<%= @greeting %>, find me in app/views/app/views/user_mailer/email_was_changed.text.erb
+Your email address has been successfully updated.
+
+Thanks,
+The Knoda Team
