--- a/app/views/user_mailer/signup.text.erb
+++ b/app/views/user_mailer/signup.text.erb
@@ -1,3 +1,6 @@
-UserMailer#signup
+Hi <%= @resource.username %>,
 
-<%= @greeting %>, find me in app/views/app/views/user_mailer/signup.text.erb
+Congratulations on successfully creating an account with Knoda. You can now start making predictions and inviting your friends to join Knoda!
+
+Thanks,
+The Knoda Team
