--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,10 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Hi <%= @resource.username %>,</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>You requested that your password be reset. Please click on the link below to create a new password for your Knoda account:</p>
 
 <p><%= link_to 'Change my password', edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>If you did not request that your password be reset, please ignore this email. No changes will be made to your password until the link above is clicked and you create a new password.</p>
+
+<p>Thanks,<br/>
+The Knoda Team</p>
